--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,26 +1,6 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Fabian C</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-      </div>
-    </div>
-  </div>
-</nav>
-</header>
-<section class="main container text-center">
+
+<section class="main container text-center pt-5">
   <p>Hello, I am Fabian Conejo and I am a Full Stack developer from San Jose Costa Rica.</p>
-  <a class="btn btn-secondary">View My Work</a>
+  <%= link_to 'View My Work', portfolio_path, :class => 'btn btn-secondary' %>
+  
 </section>
-<footer class="text-center mt-3">
-  <i class="fab fa-github-square fa-2x"></i>
-  <i class="fab fa-linkedin fa-2x"></i>
-  <i class="fab fa-twitter-square fa-2x"></i>
-</footer>
