Created a contact action, and stylished the view.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
         <%= link_to 'Welcome', welcome_path, :class => 'btn'%>
         <%= link_to 'Portfolio', portfolio_path, :class => 'btn' %>
         <%= link_to 'About', about_path, :class => 'btn' %>
+        <%= link_to 'Contact', contact_path, :class => 'btn' %>
       </div>
     </div>
   </div>
